<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.carlosandresjimenez.android.bakingappkotlin.ui.recipedetail.DetailActivityFragment"
    tools:showIn="@layout/activity_detail"
    android:background="@android:color/white">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_x6"
        android:paddingTop="@dimen/padding_x6"/>

</android.support.constraint.ConstraintLayout>
