...

    <string name="title_recipe_list">Recipes</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_step_detail">StepDetailActivity</string>

    <string name="ingredients_title">Ingredients</string>

    <string name="widget_ingredients_title">Ingredients</string>

    <string name="recipe_preference_key">bakingappkotlin.ui.ingredientslist.widget.recipe_preference_key</string>

    <string name="alert_dialog_send">Send to widget</string>
...
