...
        android:paddingLeft="@dimen/padding_x8"
        android:paddingRight="@dimen/padding_x8"
        android:paddingStart="@dimen/padding_x8"
        android:paddingTop="@dimen/padding_x8">

        <TextView
            android:id="@+id/shortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/description"
...
